[tool.poetry]
name = "skypro_hw_16"
version = "0.1.0"
description = ""
authors = ["Artem Kuzmenko"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
pyproject-flake8 = "^0.0.1-alpha.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
exclude = [
    "templates",
    ".venv",
    ".env",
    "venv",
    "env",
]